  25 seconds for HLS transcoding, this will make sure that at least 2 complete
  segments will be available once the file is released and visible.
* Feature: Closes #140: Filtering the files that will be encoded has been
  added. A comma-separated list of extensions is specified by the
  --include_extensions parameter. These file extensions are the only ones that
  will be transcoded.
* Bugfix: Closes #139: Additional files could be added using the --extensions
  parameter. However, this is no longer necessary; in the past, a file's
  extension determined whether or not it would be transcoded. Files with
  unknown extensions would be ignored. The extension is no longer important
  because FFmpegfs now examines all input files and recognises transcodable
  files by the format.
  The outdated --extensions argument was removed without substitution.

Important changes in 2.12 (2022-08-27):

* The code has been run through clang-tidy to identify bug-prone or
  inefficient code, and to find parts that could be modernised to C++17.
  Several issues could be resolved. Sometimes, many lines of code could be
  replaced by a few. Some parts run far more efficiently than before. C++17
  is cool. I need to get a t-shirt.
* Bugfix: In get prores bitrate(), a crash that might have happened under
  unusual circumstances has been corrected. If the best match resolution
  could not be found, array access out-of-bounds could happen.
* Bugfix: Several unlikely, but potential problems that could have happened
  when subtitle decoding failed or delayed video/audio packets couldn't be
  decoded have been fixed.
* Bugfix: An internal problem could cause the application to crash. Should
  never happen, though. Fixed anyway.
* Bugfix: Sometimes, the last segment's estimated size was incredibly small -
  about 2 bytes. Each segment should have the same predicted size as it is
  calculated simply by dividing the projected size of the entire file by the